# BaseDesktopApp

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/src/: main.cpp
include/: application.hpp  gui.hpp  log.hpp  window.hpp
src/: application.cpp  gui.cpp  window.cpp
